# actix-ws-chat

./: Cargo.toml
src/: main.rs
static/js/: ws.js
templates/: index.html
