[package]
name = "actix-ws"
version = "0.1.0"
authors = ["Voodlaz <47495939+Voodlaz@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-rt = "1.0"

actix-web = "2.0"
actix-web-actors = "2.0"

actix-files = "0.2.2"
tera = "1.0"
